--- a/template_core/.pre-commit-config.yaml
+++ b/template_core/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     rev: v1.17.0
     hooks:
       - id: mypy
-        args: [--strict, --ignore-missing-imports]
+        args: [--strict, --ignore-missing-imports, --config-file=template_core/mypy.ini]
   # NBSTRIPOUT
   - repo: https://github.com/kynan/nbstripout
     rev: 0.8.1
