--- a/template_tools/.pre-commit-config.yaml
+++ b/template_tools/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     rev: v1.17.0
     hooks:
       - id: mypy
-        args: [--strict, --ignore-missing-imports]
+        args: [--strict, --ignore-missing-imports, --config-file=template_tools/mypy.ini]
   # NBSTRIPOUT
   - repo: https://github.com/kynan/nbstripout
     rev: 0.8.1
