chore(gitignore): allow .devcontainer/.env to be tracked
Add exception to .gitignore to permit tracking of .devcontainer/.env
file, which is required for devcontainer functionality, while
maintaining the general .env ignore rule for other environment files.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ mypy.ini
 
 # environment files
 .env
+# except for the one required to make the devcontainer
+!.devcontainer/.env
 
 # Cookiecutter output
 cookiecutter-output/
